Fix page header gaps and styling

--- a/src/components/page-header/styles.scss
+++ b/src/components/page-header/styles.scss
@@ -1,4 +1,6 @@
 .page-header {
+    padding-bottom: 10px;
+    
     &.centered {
         margin: auto;
     }
